#/*================================================================================
#
#  NifTK: An image processing toolkit jointly developed by the
#              Dementia Research Centre, and the Centre For Medical Image Computing
#              at University College London.
#  
#  See:        http://dementia.ion.ucl.ac.uk/
#              http://cmic.cs.ucl.ac.uk/
#              http://www.ucl.ac.uk/
#
#  Copyright (c) UCL : See LICENSE.txt in the top level directory for details. 
#
#  Last Changed      : $LastChangedDate: 2011-04-07 12:16:53 +0100 (Thu, 07 Apr 2011) $ 
#  Revision          : $Revision: 5798 $
#  Last modified by  : $Author: mjc $
#
#  Original author   : m.clarkson@ucl.ac.uk
#
#  This software is distributed WITHOUT ANY WARRANTY; without even
#  the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
#  PURPOSE.  See the above copyright notices for more information.
#
#=================================================================================*/

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Freesurfer)
ADD_SUBDIRECTORY(Fluid)
ADD_SUBDIRECTORY(Registration)
ADD_SUBDIRECTORY(SIENA)
ADD_SUBDIRECTORY(GradwarpCorrection)
ADD_SUBDIRECTORY(BoundaryShiftIntegral)
ADD_SUBDIRECTORY(TBSS)
ADD_SUBDIRECTORY(Utilities)
ADD_SUBDIRECTORY(Segmentation)
ADD_SUBDIRECTORY(CorticalThickness)
ADD_SUBDIRECTORY(Parcellation)
ADD_SUBDIRECTORY(MAPS)
ADD_SUBDIRECTORY(Applications)
