#/*============================================================================
#
#  NifTK: A software platform for medical image computing.
#
#  Copyright (c) University College London (UCL). All rights reserved.
#
#  This software is distributed WITHOUT ANY WARRANTY; without even
#  the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
#  PURPOSE.
#
#  See LICENSE.txt in the top level directory for details.
#
#============================================================================*/

ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Freesurfer)
ADD_SUBDIRECTORY(Fluid)
ADD_SUBDIRECTORY(Registration)
ADD_SUBDIRECTORY(SIENA)
ADD_SUBDIRECTORY(GradwarpCorrection)
ADD_SUBDIRECTORY(BoundaryShiftIntegral)
ADD_SUBDIRECTORY(TBSS)
ADD_SUBDIRECTORY(Utilities)
ADD_SUBDIRECTORY(CorticalThickness)
ADD_SUBDIRECTORY(Parcellation)
ADD_SUBDIRECTORY(MAPS)
ADD_SUBDIRECTORY(Slicer)
ADD_SUBDIRECTORY(MSTools)